# PicMoments

./: CMakeLists.txt  PicMoments.pro  PicSelf.pro  PicYou.pro  README.md  about.cpp  about.h  about.ui  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  threshold.cpp  threshold.h  videosettings.cpp  videosettings.h  videosettings.ui
src/: PicMoments.pro  about.h  about.ui  icons.qrc  main.cpp  mainwindow.h  mainwindow.ui  threshold.ui  videosettings.cpp  videosettings.ui
